Terraformfile.tf
provider "aws" {
        region = "ap-southeast-1"
    }
resource "aws_instance" "dpp-aws" {
    ami = "ami-06c4be2792f419b7b"                             //ubuntu AMI.
    key_name = "Amankey"
    instance_type = "t2.micro"
    vpc_security_group_ids = [aws_security_group.dpp-sec.id]
    subnet_id = aws_subnet.dpp-public-subnet-01.id
for_each = toset (["Jenkins-master1", "Build-slave1", "Ansible1"])     //It create 3 instances.
    tags = {
        Name = "${each.key}"                                       //It will give the Different names as mentioned in the for_each.
    }
}
resource "aws_security_group" "dpp-sec" {
    name = "dpp-sec"
    description = "This is my security group"
    vpc_id = aws_vpc.dpp-vpc.id
    ingress {
        description = "SSH access"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "dpp-sec"
    }
}
resource "aws_vpc" "dpp-vpc" {
    cidr_block = "10.1.0.0/16"
    tags = {
        Name = "dpp-vpc"
    }
}
resource "aws_subnet" "dpp-public-subnet-01" {
    vpc_id = aws_vpc.dpp-vpc.id
    cidr_block = "10.1.1.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "ap-southeast-1a"
    tags = {
        Name = "dpp-public-subnet-01"
    }
}
resource "aws_subnet" "dpp-public-subnet-02" {
    vpc_id = aws_vpc.dpp-vpc.id
    cidr_block = "10.1.2.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "ap-southeast-1b"
    tags = {
        Name = "dpp-public-subnet-02"
    }
}
resource "aws_internet_gateway" "dpp-igw" {
    vpc_id = aws_vpc.dpp-vpc.id
    tags = {
        Name = "dpp-igw"
    }
}
resource "aws_route_table" "dpp-rt" {
    vpc_id = aws_vpc.dpp-vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.dpp-igw.id
    }
}
resource "aws_route_table_association" "dpp-rta-public-subnet-01" {
    subnet_id = aws_subnet.dpp-public-subnet-01.id
    route_table_id = aws_route_table.dpp-rt.id
}
resource "aws_route_table_association" "dpp-rta-public-subnet-02" {
    subnet_id = aws_subnet.dpp-public-subnet-02.id
    route_table_id = aws_route_table.dpp-rt.id
}
